# reown

./: .gitattributes  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  mise.toml  prd.json  progress.txt.1
.claude/: settings.json
.claude/rules/: frontend.md  git.md
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_feedback.yml
.github/workflows/: ci.yml  issue-guard.yml  update-vrt-snapshots.yml
agent/: loop.sh  workflow.md
agent/lib/: 00_config.sh  10_log.sh  15_run_claude.sh  20_rate_limit.sh  30_git.sh  35_cleanup.sh  40_github.sh  50_failure_tracking.sh
agent/prompts/: implement.md  propose.md  review.md  roadmap.md  split.md  validate-diff.md  verify.md
agent/steps/: 01_setup.sh  02_triage.sh  03_select.sh  04_implement.sh  05_verify.sh  05a_reqverify.sh  05b_review.sh  06_push.sh  07_ci.sh  08_complete.sh
agent/tests/: test_ci_fallback.sh  test_log_rotation.sh
app/: Cargo.toml  tauri.conf.json
app/src/: error.rs  main.rs
docs/: INTENT.md  development.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright-vrt.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts  preview.tsx
frontend/src/: App.tsx  RepositoryContext.tsx  ThemeContext.tsx  invoke.ts  style.css  types.ts
frontend/test-results/: .last-run.json
lib/: config.rs  lib.rs  repository.rs  review_history.rs
lib/analysis/: classify.rs  llm_analysis.rs  mod.rs  review_pattern.rs  risk.rs
lib/automation/: auto_approve.rs  mod.rs  orchestration.rs
lib/git/: branch.rs  diff.rs  mod.rs  test_utils.rs  todo.rs  worktree.rs
lib/github/: auth.rs  mod.rs  pull_request.rs
lib/llm/: client.rs  mod.rs  stream.rs  summary.rs  types.rs
lib/ui/: mod.rs  pull_request.rs
src/: app.rs  i18n.rs  lib.rs  main.rs
src-frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src-frontend/src/: App.tsx  index.html  invoke.ts  main.js  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/git/: branch.rs  diff.rs  mod.rs  test_utils.rs  (+1 more)
(+189 files in other folders)
