[package]
name = "reown"
version = "0.1.0"
edition = "2021"
description = "Own your codebase again, even in the age of agent PR storm."

[dependencies]
git2 = "0.20.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.25.0"
