[workspace]
members = [".", "app"]
resolver = "2"

[package]
name = "reown"
version = "0.1.0"
edition = "2021"
description = "Own your codebase again, even in the age of agent PR storm."

[lib]
name = "reown"
path = "lib/lib.rs"

[dependencies]
git2 = "0.20.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["apple-native"] }
futures = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.25.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "1"
mockito = "1"
serial_test = "3"
