[package]
name = "reown-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI for reown"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reown = { path = ".." }
